sdk_tests/tests/read-write-macro-fail/tuple_style_enum_not_supported.stderr
error: proc-macro derive panicked
 --> tests/read-write-macro-fail/tuple_style_enum_not_supported.rs:4:10
  |
4 | #[derive(ReadWriteState)]
  |          ^^^^^^^^^^^^^^
  |
  = help: message: PBC serialization derives only supports explicitly discriminated C-style enums and enums consisting of struct variants
